# Crab-Shell

./: .gitignore  Cargo.toml  README.md  build.sh  cleanup.sh
src/: main.rs
src/builtins/: basics.rs
src/types/: traits.rs  types.rs
