[package]
name = "crab-shell"
version = "0.1.0"
authors = ["bgreni <grenierb96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.1.2"
colour = "0.6.0"
lazy_static = "1.4.0"
regex = "1.5.3"
nix = "0.10.0"
dirs = "3.0.2"